@@ -14,8 +14,8 @@ A typical installation is as follows:
     > sudo make install         # Install libs, binaries, and config-files
     > sudo make install-include # Install include files (for compiling)
 
-Several example applications are provided, including Hello, NTP, and
-datamodel. See also [ROST](https://github.com/clicon/rost) which is an
+Several example applications are provided, including Hello, NTP,
+datamodel and yang router. See also [ROST](https://github.com/clicon/rost) which is an
 open-source router using CLICON. It all origins from work at
 [KTH](http://www.csc.kth.se/~olofh/10G_OSR)
 
